Fix UI z-index

--- a/public/demo.css
+++ b/public/demo.css
@@ -23,6 +23,7 @@ body {
     left: 0;
     position: sticky;
     top: 0;
+    z-index: 1;
   }
 }
 
